--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -2,6 +2,7 @@
   font-size: 12px;
   box-shadow: 0 0 10px #ececec;
   padding: 20px;
+  background-color: #fff;
   .count {
     display: flex;
     align-items: baseline;
