--- a/src/pages/Home/style.module.scss
+++ b/src/pages/Home/style.module.scss
@@ -8,6 +8,9 @@
     align-items: baseline;
     .value {
       font-size: 23px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
   .name {
